--- a/presto-main/etc/config.properties
+++ b/presto-main/etc/config.properties
@@ -40,6 +40,7 @@ plugin.bundles=\
   ../presto-sqlserver/pom.xml, \
   ../presto-postgresql/pom.xml, \
   ../presto-tpcds/pom.xml, \
+  ../presto-geospatial/pom.xml, \
   ../presto-security-uber/pom.xml
 
 presto.version=testversion
