Migrate Uber UDFs from release-217.
Summary:
Combines patches in release-217 that are adding a UDF or fixing a UDF
0e5eadb	Migrated Uber UDFs from release-203
94823f8 Updated H3 Hex UDFs to handle null inputs correctly
5006c8b Upgraded H3 library and added get_parent_hexagon_addr(). This ports @xie's D2666111 to release-217 branch
c32cd82 Fixed @SqlNullable annotations for Uber Presto UDFs
a046477 Add h3 functions to presto: distance

Reviewers: dharakk, sgurmeet, vivekb

Reviewed By: dharakk

Subscribers: xie

Differential Revision: https://code.uberinternal.com/D4137561

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
         <module>presto-benchmark-runner</module>
         <module>presto-event-listener</module>
         <module>presto-security-uber</module>
+        <module>presto-udf</module>
     </modules>
 
     <dependencyManagement>
@@ -433,6 +434,12 @@
             <dependency>
                 <groupId>com.facebook.presto</groupId>
                 <artifactId>presto-expressions</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.facebook.presto</groupId>
+                <artifactId>presto-udf</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
