Add decryption functionality to presto
Summary:
Part of the requirement of column access control is that Presto can have the decryption functionality to read the encrypted columns in Parquet. This change is to add decryption functionality to presto. This is the internal change for ticket: https://github.com/prestodb/presto/issues/12048

The original change in Parquet for encryption/decryption can be found https://code.uberinternal.com/rDAPARPE36f723212376257ce726a181a5417e99f8e72a44

The encryption specification for Parquet can be found here https://github.com/apache/parquet-format/blob/encryption/Encryption.md

Ported following patches from release-217 branch:
https://code.uberinternal.com/D2669729
https://code.uberinternal.com/D2987077
https://code.uberinternal.com/D3023903
https://code.uberinternal.com/D3681725
https://code.uberinternal.com/D4027949
https://code.uberinternal.com/D4050487
https://code.uberinternal.com/D4050503

Reviewers: shangx

Reviewed By: shangx

Differential Revision: https://code.uberinternal.com/D4193875

--- a/presto-hive/pom.xml
+++ b/presto-hive/pom.xml
@@ -56,6 +56,18 @@
 
         <dependency>
             <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-common</artifactId>
+            <version>${dep.parquet.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
             <artifactId>parquet-hadoop</artifactId>
             <version>${dep.parquet.version}</version>
             <exclusions>
@@ -388,6 +400,25 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.uber.crypto-metadata-retriever</groupId>
+            <artifactId>crypto-metadata-retriever</artifactId>
+            <version>${dep.crypto.metadata.retriever.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.parquet</groupId>
+                    <artifactId>parquet-format</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -458,6 +489,20 @@
                                 <include>**/TestHiveDistributedAggregationsWithExchangeMaterialization.java</include>
                                 <include>**/TestHiveDistributedQueriesWithExchangeMaterialization.java</include>
                             </includes>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.basepom.maven</groupId>
+                        <artifactId>duplicate-finder-maven-plugin</artifactId>
+                        <configuration>
+                            <ignoredResourcePatterns>
+                                <ignoredResourcePattern>parquet.thrift</ignoredResourcePattern>
+                                <ignoredResourcePattern>about.html</ignoredResourcePattern>
+                            </ignoredResourcePatterns>
+                            <ignoredClassPatterns>
+                                <ignoredClassPattern>shaded.parquet.it.unimi.dsi.fastutil.*</ignoredClassPattern>
+                                <ignoredClassPattern>module-info</ignoredClassPattern>
+                            </ignoredClassPatterns>
                         </configuration>
                     </plugin>
                 </plugins>
