--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,10 @@
         <dep.testng.version>6.10</dep.testng.version>
         <dep.assertj-core.version>3.8.0</dep.assertj-core.version>
         <dep.logback.version>1.2.3</dep.logback.version>
-        <dep.parquet.version>1.10.0</dep.parquet.version>
+        <dep.parquet.version>1.10.2</dep.parquet.version>
+        <dep.parquet.format.version>2.4.0-encr</dep.parquet.format.version>
+        <dep.crypto.metadata.retriever.version>0.18.1-1565-a5d610944fda-java-monorepo</dep.crypto.metadata.retriever.version>
+
         <dep.nexus-staging-plugin.version>1.6.8</dep.nexus-staging-plugin.version>
         <dep.asm.version>6.2.1</dep.asm.version>
         <dep.gcs.version>1.9.17</dep.gcs.version>
@@ -1493,6 +1496,7 @@
                                     <!-- TODO: fix this in Airlift resolver -->
                                     <exclude>org.codehaus.plexus:plexus-utils</exclude>
                                     <exclude>com.google.guava:guava</exclude>
+                                    <exclude>javax.annotation:javax.annotation-api</exclude>
                                 </excludes>
                             </requireUpperBoundDeps>
                         </rules>
