--- a/neutrino/etc/config.properties
+++ b/neutrino/etc/config.properties
@@ -69,8 +69,8 @@ node-scheduler.max-pending-splits-per-task=100
 log.max-history=5
 log.max-size=100MB
 optimizer.force-single-node-output=false
-#statement.headers-for-user=RPC-Caller,X-Uber-Origin
-#statement.default-wait-for-entire-response-interval=1m
+statement.headers-for-user=RPC-Caller,X-Uber-Origin
+statement.default-wait-for-entire-response-interval=1m
 #statement.default-catalog=rta
 #optimizer.force-single-node-plan=true
 #optimizer.tuple-domain-limit-in-predicate=15
