--- a/neutrino/etc/config.properties
+++ b/neutrino/etc/config.properties
@@ -73,7 +73,7 @@ statement.headers-for-user=RPC-Caller,X-Uber-Origin
 statement.default-wait-for-entire-response-interval=1m
 statement.default-catalog=rta
 #optimizer.force-single-node-plan=true
-#optimizer.tuple-domain-limit-in-predicate=15
+optimizer.tuple-domain-limit-in-predicate=15
 #query.delay-task-start=true
 #plancaching.plan-cache-size=1000
 #plancaching.plan-cache-duration=10m
