--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
         <module>presto-sql-function</module>
         <module>presto-expressions</module>
         <module>presto-benchmark-runner</module>
+        <module>presto-event-listener</module>
     </modules>
 
     <dependencyManagement>
