--- a/presto-server-neutrino/pom.xml
+++ b/presto-server-neutrino/pom.xml
@@ -107,6 +107,13 @@
             <type>zip</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.facebook.presto</groupId>
+            <artifactId>presto-event-listener</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
