Support PathFilter when fetching splits for Hudi tables
Summary:
    - Introduce PathFilter support in DirectoryLister interface and HiveFileIterator
    - Unit test HiveFileIterator using PathFilter
    - Plug specific PathFilter implementation for HoodieParquetInputFormat

Combines following PRs into one:
https://github.com/prestodb/presto/pull/13818
https://github.com/prestodb/presto/pull/14085
https://github.com/prestodb/presto/pull/14088

Reviewers: bhasudha

Differential Revision: https://code.uberinternal.com/D4168579

--- a/presto-hive/pom.xml
+++ b/presto-hive/pom.xml
@@ -71,6 +71,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.hudi</groupId>
+            <artifactId>hudi-hadoop-mr</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-memory-context</artifactId>
         </dependency>
