Bypass http call if the node is local
If a global config is set and the node-uri matches the current
node, then use the task manager directly for fetching exchange data and
doing task calls. That is bypass the taskResource if these conditions
are satisfied.

In addition, the backoff changed  such that the local mode
never undergoes a backoff. It's a bit hacky but does the job.

Can be enabled (default is disabled) by setting
task.bypass-http-for-local=true

--- a/neutrino/etc/config.properties
+++ b/neutrino/etc/config.properties
@@ -77,5 +77,5 @@ statement.default-wait-for-entire-response-interval=1m
 #query.delay-task-start=true
 #plancaching.plan-cache-size=1000
 #plancaching.plan-cache-duration=10m
-#task.bypass-http-for-local=true
+task.bypass-http-for-local=true
 
