[Neutrino] Added RTA connector with new pushdown framework
Summary:
Major change from release-217 is the file `RtaConnectorPlanOptimizer` added to implement pushdown according to the new framework. The main catch here is that now the plan expected by underlying connector doesn't understand `RtaTableHandle` and `RtaTableLayoutHandle` so we need to rewrite plan by replacing handles to the underlying connector, pass on for pushdown, and then restore to original as `RtaConnector` expects it. Other files are mostly as it is from release-217 (With notion of ARESDB removed) with some interface/semantic changes to adhere with new framework/branch.

Working on adding unit test for `RtaConnectorPlanOptimizer`

Test Plan:
Tested querying a pinot table via rta catalog:

```
presto> select cityid, count(*) from rta.rta.eats_marketplace_metrics where windowendtime >= cast(to_unixtime(NOW() - INTERVAL '2' HOUR) as bigint) group by cityid;
 cityid |   _col1
--------+-----------
    458 | 196242177
      1 | 129633277
     14 | 128144857
     90 | 109809168
     12 | 101098320
    296 |  97151980
     18 |  94657735
```

Reviewers: bhasudha, venkik, ujwala

Reviewed By: bhasudha, venkik

Differential Revision: https://code.uberinternal.com/D3860549

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
         <module>presto-pinot-toolkit</module>
         <module>presto-cli</module>
         <module>presto-benchmark-driver</module>
+        <module>presto-rta</module>
         <module>presto-server</module>
         <module>presto-server-rpm</module>
         <module>presto-docs</module>
@@ -308,6 +309,12 @@
             <dependency>
                 <groupId>com.facebook.presto</groupId>
                 <artifactId>presto-pinot-toolkit</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.facebook.presto</groupId>
+                <artifactId>presto-rta</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
