--- a/neutrino/etc/catalog/rta_staging.properties
+++ b/neutrino/etc/catalog/rta_staging.properties
@@ -1,5 +1,6 @@
 connector.name=rta
-rtaums_service=rtaums-staging
+rtaums_service=rtaums
+rtaums_environment=pre_production
 config_file=etc/rta_clusters.json
 extra_definition_files=etc/api_cities_definition.json,etc/geofences_configstore_udr_geofences_definition.json
 extra_deployment_files=etc/api_cities_deployment.json,etc/geofences_configstore_udr_geofences_deployment.json
