--- a/neutrino/etc/catalog/rtadev.properties
+++ b/neutrino/etc/catalog/rtadev.properties
@@ -1,5 +1,5 @@
 connector.name=rta
-rtaums_service=rtaums
+rtaums_service=rtaums-staging
 rtaums_environment=production
 config_file=etc/rta_clusters.json
 extra_definition_files=etc/api_cities_definition.json,etc/geofences_configstore_udr_geofences_definition.json
