--- a/pom.xml
+++ b/pom.xml
@@ -960,7 +960,7 @@
             <dependency>
                 <groupId>org.apache.hudi</groupId>
                 <artifactId>hudi-hadoop-mr</artifactId>
-                <version>0.5.1-incubating</version>
+                <version>0.5.1-incubating-prestouber2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.objenesis</groupId>
