--- a/presto-rta/pom.xml
+++ b/presto-rta/pom.xml
@@ -111,6 +111,12 @@
 
         <dependency>
             <groupId>com.facebook.presto</groupId>
+            <artifactId>presto-aresdb-toolkit</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.facebook.presto</groupId>
             <artifactId>presto-main</artifactId>
             <version>${project.version}</version>
         </dependency>
