--- a/presto-server-neutrino/pom.xml
+++ b/presto-server-neutrino/pom.xml
@@ -100,6 +100,15 @@
             <scope>provided</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.facebook.presto</groupId>
+            <artifactId>presto-aresdb</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-rta</artifactId>
