--- a/presto-server-neutrino/pom.xml
+++ b/presto-server-neutrino/pom.xml
@@ -131,6 +131,13 @@
             <type>zip</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.uber.presto</groupId>
+            <artifactId>presto-security-uber</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
