Enable healthline logging from Neutrino
Reviewers: dharakk, venkik, sgurmeet

Reviewed By: dharakk, sgurmeet

Maniphest Tasks: T5618351

Differential Revision: https://code.uberinternal.com/D4174899

--- a/presto-accumulo/pom.xml
+++ b/presto-accumulo/pom.xml
@@ -77,6 +77,10 @@
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>commons-codec</groupId>
+                    <artifactId>commons-codec</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -146,6 +150,10 @@
                     <groupId>org.apache.maven.scm</groupId>
                     <artifactId>maven-scm-provider-svnexe</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>commons-codec</groupId>
+                    <artifactId>commons-codec</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -170,6 +178,10 @@
             <groupId>com.facebook.airlift</groupId>
             <artifactId>bootstrap</artifactId>
             <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>log4j-over-slf4j</artifactId>
