[Neutrino] Fixing the conversion for dateTrunc
Summary: porting date_trunc fix D4186349 to master

Reviewers: ujwala, lxning

Reviewed By: ujwala

Subscribers: O4263 subscribe to presto changes

Differential Revision: https://code.uberinternal.com/D4516831

--- a/neutrino/etc/catalog/pinotphxstg.properties
+++ b/neutrino/etc/catalog/pinotphxstg.properties
@@ -8,3 +8,4 @@ pinot.forbid-segment-queries=true
 pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.extra-http-headers=Rpc-Routing-Zone:phx3,Rpc-Routing-Delegate:crosszone
+pinot.use-date-trunc=true
