--- a/neutrino/etc/catalog/pinotadhoc.properties
+++ b/neutrino/etc/catalog/pinotadhoc.properties
@@ -6,3 +6,4 @@ pinot.allow-multiple-aggregations=true
 pinot.forbid-segment-queries=true
 pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
+pinot.use-date-trunc=true
