Adding a config to retry on pinot exceptions
Summary: backporting https://github.com/prestodb/presto/pull/14649

Reviewers: ujwala, #ldap_rta-group

Reviewed By: ujwala

Subscribers: O4263 subscribe to presto changes

Differential Revision: https://code.uberinternal.com/D4861343

--- a/neutrino/etc/catalog/pinotdcastg.properties
+++ b/neutrino/etc/catalog/pinotdcastg.properties
@@ -10,3 +10,4 @@ pinot.http-client.max-threads=4
 pinot.extra-http-headers=Rpc-Routing-Zone:dca1,Rpc-Routing-Delegate:crosszone
 pinot.use-date-trunc=true
 pinot.non-aggregate-limit-for-broker-queries=50001
+pinot.mark-data-fetch-exceptions-as-retriable=true
