--- a/neutrino/etc/catalog/pinotadhoc.properties
+++ b/neutrino/etc/catalog/pinotadhoc.properties
@@ -8,3 +8,4 @@ pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.use-date-trunc=true
 pinot.non-aggregate-limit-for-broker-queries=50001
+pinot.mark-data-fetch-exceptions-as-retriable=true
