--- a/neutrino/etc/catalog/pinotsandbox.properties
+++ b/neutrino/etc/catalog/pinotsandbox.properties
@@ -9,3 +9,4 @@ pinot.http-client.max-threads=4
 pinot.extra-http-headers=Rpc-Routing-Zone:phx3,Rpc-Routing-Delegate:crosszone
 pinot.rest-proxy-url=localhost:5436
 pinot.non-aggregate-limit-for-broker-queries=50001
+pinot.mark-data-fetch-exceptions-as-retriable=true
