--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,6 @@
         <dep.nexus-staging-plugin.version>1.6.8</dep.nexus-staging-plugin.version>
         <dep.asm.version>6.2.1</dep.asm.version>
         <dep.gcs.version>1.9.17</dep.gcs.version>
-        <dep.hudi.version>0.5.1.2</dep.hudi.version>
 
         <!--
           America/Bahia_Banderas has:
@@ -961,7 +960,7 @@
             <dependency>
                 <groupId>org.apache.hudi</groupId>
                 <artifactId>hudi-common</artifactId>
-                <version>${dep.hudi.version}</version>
+                <version>0.5.1-incubating-prestouber2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.objenesis</groupId>
@@ -1005,7 +1004,7 @@
             <dependency>
                 <groupId>org.apache.hudi</groupId>
                 <artifactId>hudi-hadoop-mr</artifactId>
-                <version>${dep.hudi.version}</version>
+                <version>0.5.1-incubating-prestouber2</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.objenesis</groupId>
