[Pinot connector] Increasing the non aggregate query limit to match the prod queries
Summary:
Many quries use 50000 limit on nonaggregate queries as that was the limit in 217. So bumping the default 25,000 value to 50001 to allow existing queries

```
    SELECT is_orderable, event_time, is_in_menu_hours, restaurant_uuid
    FROM rta.rta.restaurant_orderability_realtime_analytics
    WHERE restaurant_uuid in ('e654fa26-94d0-4af5-9898-faa3e3c624e7')
      AND local_datestr = '2020-08-14'
    ORDER BY restaurant_uuid, event_time ASC
    LIMIT 50000
```

Test Plan: Ran all the faileds queries in shadow testing

Reviewers: ujwala, #ldap_rta-group

Reviewed By: ujwala

Subscribers: O4263 subscribe to presto changes

Differential Revision: https://code.uberinternal.com/D4798709

--- a/neutrino/etc/catalog/pinotadhoc.properties
+++ b/neutrino/etc/catalog/pinotadhoc.properties
@@ -7,3 +7,4 @@ pinot.forbid-segment-queries=true
 pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.use-date-trunc=true
+pinot.non-aggregate-limit-for-broker-queries=50001
