--- a/neutrino/etc/catalog/pinotcanary.properties
+++ b/neutrino/etc/catalog/pinotcanary.properties
@@ -8,3 +8,4 @@ pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.use-date-trunc=true
 pinot.extra-http-headers=Rpc-Routing-Zone:dca1,Rpc-Routing-Delegate:crosszone
+pinot.non-aggregate-limit-for-broker-queries=50001
