--- a/neutrino/etc/catalog/pinotdcastg.properties
+++ b/neutrino/etc/catalog/pinotdcastg.properties
@@ -9,3 +9,4 @@ pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.extra-http-headers=Rpc-Routing-Zone:dca1,Rpc-Routing-Delegate:crosszone
 pinot.use-date-trunc=true
+pinot.non-aggregate-limit-for-broker-queries=50001
