--- a/neutrino/etc/catalog/pinotprod.properties
+++ b/neutrino/etc/catalog/pinotprod.properties
@@ -7,3 +7,4 @@ pinot.forbid-segment-queries=true
 pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.use-date-trunc=true
+pinot.non-aggregate-limit-for-broker-queries=50001
