--- a/neutrino/etc/catalog/pinotsandbox.properties
+++ b/neutrino/etc/catalog/pinotsandbox.properties
@@ -8,3 +8,4 @@ pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
 pinot.extra-http-headers=Rpc-Routing-Zone:phx3,Rpc-Routing-Delegate:crosszone
 pinot.rest-proxy-url=localhost:5436
+pinot.non-aggregate-limit-for-broker-queries=50001
