--- a/neutrino/etc/catalog/pinotdcastg.properties
+++ b/neutrino/etc/catalog/pinotdcastg.properties
@@ -7,7 +7,7 @@ pinot.allow-multiple-aggregations=true
 pinot.forbid-segment-queries=true
 pinot.http-client.min-threads=1
 pinot.http-client.max-threads=4
-pinot.extra-http-headers=Rpc-Routing-Zone:phx3,Rpc-Routing-Delegate:crosszone
+pinot.extra-http-headers=Rpc-Routing-Zone:dca1,Rpc-Routing-Delegate:crosszone
 pinot.use-date-trunc=true
 pinot.non-aggregate-limit-for-broker-queries=50001
 pinot.mark-data-fetch-exceptions-as-retriable=true
