--- a/presto-main/etc/catalog/hive-v2.properties
+++ b/presto-main/etc/catalog/hive-v2.properties
@@ -6,4 +6,5 @@
 #
 
 connector.name=hive-hadoop2
-hive.metastore.uri=thrift://localhost:9083
+hive.metastore.discovery.uri=http://localhost:5436/discover
+hive.metastore.discovery.rpcservicename=hms-presto_read_neon
