--- a/udeploy/pinocchio/photon.yaml
+++ b/udeploy/pinocchio/photon.yaml
@@ -27,6 +27,7 @@ custom:
     - ENV PATH=$PATH:$JAVA_HOME/bin
     - RUN update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-amd64/bin/java 9999
     - RUN cp ./photon/krb5.conf /etc/krb5.conf
+    - RUN mkdir -p /etc/uber && chown -R udocker:udocker /etc/uber
     - RUN bash -x ./photon/setup-sudoers.sh
     - RUN ./photon/build_target.sh
     - RUN chown -R udocker:udocker /home/udocker/photon*
