--- a/neutrino/etc/catalog/pinotprod.properties
+++ b/neutrino/etc/catalog/pinotprod.properties
@@ -9,3 +9,4 @@ pinot.http-client.max-threads=4
 pinot.use-date-trunc=true
 pinot.non-aggregate-limit-for-broker-queries=50001
 pinot.mark-data-fetch-exceptions-as-retriable=true
+pinot.extra-http-headers=Rpc-Routing-Zone:dca1,Rpc-Routing-Delegate:crosszone
