--- a/presto-parquet/pom.xml
+++ b/presto-parquet/pom.xml
@@ -252,6 +252,10 @@
                     <groupId>org.apache.parquet</groupId>
                     <artifactId>parquet-hadoop</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>jakarta.annotation</groupId>
+                    <artifactId>jakarta.annotation-api</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
