--- a/presto-main/etc/catalog/hive.properties
+++ b/presto-main/etc/catalog/hive.properties
@@ -3,8 +3,11 @@
 # ^^^^^^^
 # This configuration file is for development only and should NOT be used be
 # used in production. For example configuration, see the Presto documentation.
+
+# Use below configs to use dynamic hive cluster instead of static
+# hive.metastore.discovery.type=dynamic
+# hive.metastore.discovery.uri={"url":"http://localhost:5436/discover","headers":{"Rpc-Service":"hms-general_staging_neon","Rpc-Caller":"hs2-general_staging_neon"}}
 #
 
 connector.name=hive-hadoop2
-hive.metastore.discovery.type=dynamic
-hive.metastore.discovery.uri={"url":"http://localhost:5436/discover","headers":{"Rpc-Service":"hms-general_staging_neon","Rpc-Caller":"hs2-general_staging_neon"}}
+hive.metastore.uri=thrift://localhost:9083
