--- a/pom.xml
+++ b/pom.xml
@@ -1784,6 +1784,12 @@
                 <artifactId>stream</artifactId>
                 <version>2.9.5</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.facebook.airlift</groupId>
+                <artifactId>http-client</artifactId>
+                <version>0.191</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
