add sample properties

--- a/presto-main/etc/catalog/hive.properties
+++ b/presto-main/etc/catalog/hive.properties
@@ -6,4 +6,6 @@
 #
 
 connector.name=hive-hadoop2
-hive.metastore.uri=thrift://localhost:9083
+#hive.metastore.uri=thrift://localhost:9083
+hive.metastore.discovery.type=dynamic
+hive.metastore.discovery.uri={"url":"http://localhost:8000/discover","headers":{"service-name":"my-hms-service"}}
