--- a/presto-main/etc/catalog/hive.properties
+++ b/presto-main/etc/catalog/hive.properties
@@ -6,6 +6,8 @@
 #
 
 connector.name=hive-hadoop2
-#hive.metastore.uri=thrift://localhost:9083
-hive.metastore.discovery.type=dynamic
-hive.metastore.discovery.uri={"url":"http://localhost:5436/discover","headers":{"Rpc-Service":"hms-general_staging_neon","Rpc-Caller":"hs2-general_staging_neon"}}
+hive.metastore.uri=thrift://localhost:9083
+
+# Uncomment below lines if dynamic discovery of HMS URI needs to be enabled
+# hive.metastore.discovery-type=dynamic
+# hive.metastore.discovery-uri={"url":"http://localhost:5436/discover","headers":{"Rpc-Service":"hms-general_staging_neon","Rpc-Caller":"hs2-general_staging_neon"}}
